# registrar

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  license-apache  license-mit  module.nix  registrar.cabal  run.sh  shell.nix  treefmt.toml
.github/workflows/: ci.yml  test.yml
app/: Main.hs
crates/registrar-bin/: Cargo.toml
crates/registrar-database/: Cargo.toml
crates/registrar-http/: Cargo.toml
crates/registrar-templates/: Cargo.toml
src/: App.hs  CLI.hs  Registrar.hs
src/Registrar/: API.hs  Bot.hs  ClientTypes.hs  Config.hs  Database.hs  Orphans.hs  Prelude.hs  State.hs  TelegramAuth.hs  Types.hs
src/Registrar/API/: Community.hs  OAuth.hs  Util.hs
src/Registrar/Bot/: Common.hs  Handler.hs  Message.hs  Parse.hs  Reply.hs  State.hs  Types.hs  Webhook.hs
src/Registrar/Database/: Community.hs  Migrations.hs  Types.hs
src/Registrar/Types/: Community.hs
