cabal-version:   3.0
name:            registrar
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      lambdajon42@gmail.com
author:          lambdajon
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:
    Registrar
    Registrar.API
    Registrar.Bot
    Registrar.Bot.Common
    Registrar.Bot.Handler
    Registrar.Bot.Message
    Registrar.Bot.Parse
    Registrar.Bot.Reply
    Registrar.Bot.State
    Registrar.Bot.Types
    Registrar.Bot.Webhook
    Registrar.Database
    Registrar.Database.Migrations
    Registrar.Orphans
    Registrar.Prelude
    Registrar.State
    Registrar.TelegramAuth
    Registrar.Types

  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , containers
    , cryptohash-sha256
    , esqueleto
    , http-types
    , log-base
    , monad-logger
    , mtl
    , optparse-generic
    , persistent
    , persistent-migration
    , persistent-postgresql
    , resource-pool
    , safe-exceptions
    , servant
    , servant-client
    , servant-server
    , stm
    , telegram-bot-api
    , telegram-bot-simple
    , text
    , transformers
    , unliftio
    , unordered-containers
    , utf8-string
    , wai
    , warp

  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

executable registrar
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2024
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , bytestring
    , registrar

test-suite registrar-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: GHC2024
  ghc-options:      -Wall
  build-depends:
    , base
    , registrar
